--- a/src/blog/index.qmd
+++ b/src/blog/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: "Medhat Omr"
 sidebar: false
 toc: true
 listing:
@@ -30,6 +29,7 @@ I am a Senior Software Engineer specializing in autonomous drilling optimization
 
 ## 💼 Work With Me
 
+I stay current with advanced data ecosystems, leveraging tools like Dataiku, DCV, and GCP, and I’ve developed reproducible ML pipelines with scikit-learn and Optuna-driven hyperparameter optimization. Committed to innovation and continuous learning, I’ve presented ML findings to senior leadership, and fostered a culture of knowledge-sharing through workshops and mentorship. My approach emphasizes delivering measurable results—improved operational efficiency, enhanced real-time analytics, and data-driven decision-making—to drive strategic impact within the energy sector.
 
 ## 📮 Feed
 
