Update docusaurus.config.ts set default color mode to dark and respect user preferences; add link-external-newwindow option in _quarto.yaml; create new marimo_example.py and state_estimation_bug_blog.py files for educational projects

--- a/src/md/index.qmd
+++ b/src/md/index.qmd
@@ -5,3 +5,8 @@ sidebar_position: 1
 ---
 
 [my blog](https://momr.github.io/Blog/blog/)
+
+[marimo example](https://momr.github.io/Blog/nb/marimo_example)
+[state estimation](https://momr.github.io/Blog/nb/state_estimation_bug_blog)
+
+
